# locked

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: app.py  database.py  observer.py  run.py
backend/model/: chatbot.py  similarity.py  tools.py
backend/schema/: entities.py
backend/user/: state.json
frontend/function/: app.js  block.js  chat.js  event.js  study.js
frontend/page/: index.html
frontend/page/main/: blocklist.html  chat.html  index.html  study.html  tasks.html
frontend/page/shared/: base.html  blocked.html
frontend/popup/: block.html  memorize.html  task.html
frontend/style/: components.css  layout.css  tasks.css  variables.css
scripts/: activate.bat  activate.sh
