[project]
name = "locked"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.1",
    "bitcoin==1.1.42",
    "blinker==1.9.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "colorama==0.4.6",
    "comtypes==1.4.16",
    "contourpy==1.3.3",
    "crypto==1.4.1",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "ddgs>=9.14.2",
    "decorator==5.2.1",
    "duckduckgo-search>=8.1.1",
    "ecdsa==0.19.1",
    "executing==2.2.1",
    "flask==3.1.3",
    "fonttools==4.62.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "greenlet==3.3.2",
    "idna==3.11",
    "ipython==9.12.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jose==1.0.0",
    "keyboard==0.13.5",
    "kiwisolver==1.5.0",
    "markdown==3.10.2",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mcp>=1.27.0",
    "mouse>=0.7.1",
    "mpmath==1.3.0",
    "naked==0.1.32",
    "numpy==2.4.3",
    "openai>=2.35.1",
    "opencv-python==4.13.0.92",
    "ordered-set==4.1.0",
    "packaging==26.0",
    "parso==0.8.6",
    "pefile==2024.8.26",
    "pillow==12.2.0",
    "pkcs1==0.9.7",
    "playwright==1.58.0",
    "prompt-toolkit==3.0.52",
    "pure-eval==0.2.3",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pycryptodome==3.23.0",
    "pyee==13.0.1",
    "pygments==2.20.0",
    "pylatex==1.4.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-jose==3.5.0",
    "pywebview>=6.2.1",
    "pyyaml==6.0.3",
    "pyzbar==0.1.9",
    "requests==2.32.5",
    "rsa==4.9.1",
    "scapy==2.7.0",
    "screeninfo>=0.8.1",
    "shellescape==3.8.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "starlette>=1.0.0",
    "sympy==1.14.0",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "uiautomation==2.0.29",
    "unicorn==2.1.4",
    "urllib3==2.6.3",
    "uv==0.10.7",
    "uvicorn>=0.44.0",
    "volatility3==2.27.0",
    "wcwidth==0.6.0",
    "werkzeug==3.1.7",
]
